@@ -1,3 +1,4 @@
+lblRegularExpression = Regular Expression
 lblIncludeImage = Include Pictures
 lblIncludeAndCopyAttachments = Copy & Include Attachments
 lblCopyAttachments = Copy Attachments
